# Lab_4

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
generators/: CMakeLists.txt  ConcatGenerator.hpp  ContainerGenerator.hpp  FilterGenerator.hpp  Generator.hpp  IGenerator.hpp  MapGenerator.hpp  RecurrentGenerator.hpp  SkipGenerator.hpp  TakeGenerator.hpp
lab_gui/: CMakeLists.txt  lab.cpp  lab.hpp  main.cpp
lazy_sequence/: CMakeLists.txt  Cardinal.hpp  LazySequence.hpp  LazySequence.tpp  LazySequenceIterator.hpp
stream_sort/: BinaryHeap.hpp  BinaryHeap.tpp  CMakeLists.txt  StreamSorter.hpp
streams/: CMakeLists.txt  FileInputStream.hpp  FileOutputStream.hpp  InputStream.hpp  LazyInputStream.hpp  OutputStream.hpp  SequenceInputStream.hpp  SequenceOutputStream.hpp  StreamInputStream.hpp  StreamOutputStream.hpp  StringInputStream.hpp
tests/: CMakeLists.txt  test_Cardinal.cpp  test_ConcatGenerator.cpp  test_ContGenerator.cpp  test_FilterGenerator.cpp  test_LazySequence.cpp  test_MapGenerator.cpp  test_RecGenerator.cpp  test_StreamSorter.cpp  test_Streams.cpp
